--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
       </nav>
     </header>
 
+    <main>
+      <h2>Git isn't that bad!</h2>
+      <p>Hello! This is my git practice. I hope you enjoy viewing my page!</p>
+    </main>
+
+    <footer>
+      <p>That's all, folks!</p>
+    </footer>
 
 
 	</body>
