Modify header, nav, main, footer

--- a/index.html
+++ b/index.html
@@ -19,24 +19,26 @@
 
 	<body>
     <header>
-      <h1>My Git Practice</h1>
+      <h1>Module 1 - Git Practice</h1>
 
       <nav>
         <ul>
-          <li><a href="index.html">LINK 1</a></li>
-          <li><a href="index.html">LINK 2</a></li>
-          <li><a href="index.html">LINK 3</a></li>
+          <li><a href="index.html">Orange</a></li>
+          <li><a href="index.html">Yellow</a></li>
+          <li><a href="index.html">Green</a></li>
+          <li><a href="index.html">Blue</a></li>
+          <li><a href="index.html">Purple</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
-      <h2>Git isn't that bad!</h2>
+      <h2>GitHub Practice!</h2>
       <p>Hello! This is my git practice. I hope you enjoy viewing my page!</p>
     </main>
 
     <footer>
-      <p>That's all, folks!</p>
+      <h3>Advanced Web II – Summer 2019</h3>
     </footer>
 
 
