--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 
 		<title>Git Practice</title>
 
-		<link type="text/css" rel="stylesheet" href="styles.css" />
+		<link type="text/css" rel="stylesheet" href="main.css" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://fonts.googleapis.com/css?family=Hind+Madurai|Rajdhani&display=swap" rel="stylesheet">
 
 		<!--[if lt IE 9]>
 			<script src="js/html5shiv-printshiv.min.js"></script>
