--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	<body>
     <header>
-      <h1>Module 1 - Git Practice</h1>
+      <h1>Section 1 – Module 1 – Homework 1</h1>
 
       <nav>
         <ul>
@@ -35,12 +35,12 @@
     </header>
 
     <main>
-      <h2>GitHub Practice!</h2>
+      <h2>Practicing GitHub</h2>
       <p>Hello! This is my git practice. I hope you enjoy viewing my page!</p>
     </main>
 
     <footer>
-      <h3>Advanced Web II – Summer 2019</h3>
+      <h3>Advanced Web Topics II – Summer Semester</h3>
     </footer>
 
 
