Change paragraph text

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
       <h2>Git isn't that bad!</h2>
-      <p>Hello! This is my git practice. I hope you enjoy viewing my page!</p>
+      <p>This is my Git and Version Control Assignment</p>
     </main>
 
     <footer>
